<resources>
    <string name="createyour">Create your</string>
    <string name="retrieveyour">Retrieve your</string>
    <string name="otpreceived">Enter OTP received through ABDM to verify your number</string>
    <string name="healthid">ABHA</string>
    <string name="approvedby">APPROVED BY NHA</string>
    <string name="entermobileno2">Enter Mobile Number</string>
    <string name="createhealth">Create ABHA</string>
    <string name="enterdigit">Enter your 10 digit number for ABDM\nauthentication</string>
    <string name="agreetothe">I agree to the</string>
    <string name="pepolicy"><u>Privacy Policy</u></string>
    <string name="and">and</string>
    <string name="agreetocosent">Please agree to the terms and conditions</string>
    <string name="alreadyhaveabha">Already have ABHA?</string>
    <string name="enteradhardigit">Enter your Aadhaar number for ABDM\nauthentication</string>
    <string name="enteradharno">Enter Aadhaar Number</string>
    <string name="enteradharnoo">Enter Aadhaar Number.</string>
    <string name="enteradharnoodigit">Enter valid Aadhaar Number.</string>
    <string name="createABHA">Link your ABHA</string>
    <string name="resendotp">Resend OTP</string>
    <string name="otponmobile">Enter OTP received on the mobile number linked with aadhaar card.</string>
    <string name="mobilenocard">Enter mobile number you want to linked with this ABHA account.</string>
    <string name="mobileno">Mobile Number</string>
    <string name="verifyadhar">Verify Aadhaar Number</string>
    <string name="linkmobileno">Link Mobile Number</string>
    <string name="hdidcard">ABHA Card</string>
    <string name="terms"><u>Terms &amp; Conditions</u></string>
    <string name="abhade">ABHA (Ayushman Bharat Health Account)</string>
    <string name="feat1">Unique &amp; Trustable Identity</string>
    <string name="feat2">Unified Benefits</string>
    <string name="feat3">Hassle-free Access</string>
    <string name="feat4">Easy PHR Sign Up</string>
    <string name="linkurabha">Link your ABHA</string>
    <string name="featde1">Establish unique identity across different healthcare providers within the healthcare ecosystem</string>
    <string name="featde2">Link all healthcare benefits ranging from public health programmes to insurance schemes to your unique ABHA number</string>
    <string name="featde3">Avoid long lines for registration in healthcare facilities across the country</string>
    <string name="featde4">Seamless sign up for PHR (Personal Health Records) applications such as ABDM ABHA application for Health data sharing</string>
    <string name="urdighealthlocker">Your Digital Health Locker</string>
    <string name="quicklyview">Quickly View your Health Records</string>
    <string name="verify">Verify ABHA</string>
    <string name="submit">Submit</string>
    <string name="verifymobileno">Verify Mobile Number</string>
    <string name="verify1">Verify Mobile</string>
    <string name="retreiveurhealthid">Retrieve your ABHA</string>
    <string name="verificationmethod">Select the verification method to retrieve your ABHA</string>
    <string name="retreiveviaadhar">Retrieve via Aadhaar</string>
    <string name="retreiveviaabhano">Retrieve via ABHA no.</string>
    <string name="retreiveviaqr">Retrieve via QR</string>
    <string name="retreiveviamobile">Retrieve via Mobile</string>
    <string name="shareverifydetails">Please share the below details to verify your ABHA</string>
    <string name="retriveabha">Retrieve ABHA</string>
    <string name="abhanumber">Enter ABHA number</string>
    <string name="urhealthid">Your ABHA Card</string>
    <string name="createac">Create Ayushman Bharat Health Account</string>
    <string name="abha">ABHA</string>
    <string name="watisabha">What is ABHA?</string>
    <string name="abhano">ABHA (Ayushman Bharat Health Account) Address is a unique identifier (self declared username) that enables you to share and access your health records digitally.</string>
    <string name="shareabha">Scan ABHA</string>
    <string name="scanqrtoshare">Scan QR to retrieve your ABHA Profile</string>
</resources>