<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="close"
                android:src="@drawable/backico" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/ivClose"
                android:fillViewport="true"
                android:scrollbars="none">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/llMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <TextView
                                android:id="@+id/tvTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:fontFamily="@font/product_sans_medium"
                                android:gravity="left"
                                android:text="@string/linkmobileno"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvVerifyLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/product_sans_regular"
                            android:gravity="left"
                            android:text="@string/mobilenocard"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/etMobileNo"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:layout_marginTop="20dp"
                                android:background="@drawable/custom_et_bg"
                                android:fontFamily="@font/product_sans_regular"
                                android:hint="@string/mobileno"
                                android:inputType="number"
                                android:maxLength="10"
                                android:maxLines="1"
                                android:paddingLeft="10dp"
                                android:singleLine="true"
                                android:textColor="@color/black"
                                android:textColorHint="@color/gray47"
                                android:textSize="14sp" />
                        </LinearLayout>


                        <TextView
                            android:id="@+id/tvVerify"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/custom_blue_btn1"
                            android:fontFamily="@font/product_sans_medium"
                            android:gravity="center"
                            android:onClick="submit"
                            android:padding="10dp"
                            android:text="@string/submit"
                            android:textColor="@color/white"
                            android:textSize="12sp" />
                    </LinearLayout>
                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>

        <include
            android:id="@+id/custom_progress"
            layout="@layout/custom_progress"
            android:visibility="gone" />
    </RelativeLayout>
</layout>